<resources>
    <string name="app_name">TennisCoach</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="se_connecter">Se connecter</string>
    <string name="radiobutton">RadioButton</string>
    <string name="pr_nom">Prénom</string>
    <string name="bonjour_veuillez_choisir_votre_programme_d_aujourd_hui">Bonjour, Veuillez choisir votre programme d\'aujourd\'hui</string>
    <string name="afficher_les_r_sultats_pr_c_dents">Afficher les résultats précédents</string>
    <string name="coup_travailler">Coup à travailler</string>
    <string name="exercice_sp_cifique">Exercice spécifique</string>
    <string name="valider_coups">Valider</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter_avec_facebook_ou_google">Se connecter avec Facebook ou Google</string>
    <color name="bgcolor">#ff6666</color>

    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_statistiques">Statistiques</string>
    <string name="action_settings">Settings</string>
    <string name="title_coup_list">Coups</string>
    <string name="title_coup_detail">Coup Detail</string>
    <string name="title_activity_coup_details">coup_details</string>
    <string name="title_activity_comparaison_stats">Comparaison_stats</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nom">Nom</string>
    <string name="nombre_de_coups_droits">Nombre de coups droits</string>
    <string name="performance_totale_sur_10">Performance totale sur 10</string>
    <string name="vitesse_maximale_de_la_balle">Vitesse maximale de la balle</string>
    <string name="vitesse_moyenne_de_la_balle_des_deux_joueurs">Vitesse moyenne de la balle des deux joueurs</string>
    <string name="_34">34</string>
    <string name="endurance">Endurance</string>
    <string name="nombre_de_coups_droitss">Nombre de coups droits</string>
    <string name="vitesse_maximale_de_la_ballee">Vitesse maximale de la balle</string>
    <string name="vitesse_moyenne_de_la_balle">Vitesse moyenne de la balle</string>
</resources>
