<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    tools:context="fr.utt.eg23.projet.tenniscoach.menu"
    android:weightSum="1">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bonjour_veuillez_choisir_votre_programme_d_aujourd_hui"
            android:textAlignment="center"
            android:textAllCaps="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="382dp"
            android:layout_height="100dp"
            android:text="@string/exercice_sp_cifique"
            android:textStyle="bold"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/button3"
            android:layout_width="382dp"
            android:layout_height="100dp"
            android:text="@string/coup_travailler"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="382dp"
            android:layout_height="100dp"
            android:text="Séance d'une heure"
            tools:ignore="HardcodedText,SpUsage"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="382dp"
            android:layout_height="100dp"
            android:text="@string/afficher_les_r_sultats_pr_c_dents"
            android:textStyle="bold"
            android:textSize="20sp" />



</LinearLayout>
